tests/NormalTests/paczka1/small_fuzzy/50387255.err
Error in line 4: A988 S689 22,8
Error in line 9: bKBOMM S224 2,6
